# Paddi

./: .bandit  .env.example  .flake8  .gcloudignore  .gitignore  .markdownlint.json  .marprc.yml  .pre-commit-config.yaml  .pylintrc  .secrets.baseline  .yamllint  CLAUDE.md  CNAME  DEPLOY.md  DEPLOYMENT.md  DEVELOPMENT.md  Dockerfile  Makefile  README-DEPLOYMENT.md  README.md  app.yaml  cloudbuild.yaml  deploy.sh  main.py  package-lock.json  package.json  presentation.html  presentation.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.py  test_real_data.sh  test_safety_system.py
.github/: dependabot.yml
app/: .flake8  __init__.py  main.py
cli/: .gitignore  Cargo.toml  Makefile  README.md  paddi.example.toml
cli/.github/workflows/: ci.yml
cli/examples/: gcp_sample.json
cli/scripts/: build.sh  install.sh
cli/src/: main.rs
cli/src/commands/: analyze.rs  audit.rs  collect.rs  config.rs  init.rs  mod.rs  report.rs
cli/src/config/: mod.rs  tests.rs
cli/src/orchestrator/: mod.rs
cli/tests/: integration_test.rs
data/: README.md  sample_collected.json
docs/: architecture-diagram.md  architecture-mermaid.md  cloud-run-deployment.md  conf.py  demo-commands.sh  gcp-permissions.md  index.md  natural_language_interface.md  safety_system.md  setup-real-data.md  usage-scenarios.md  video-production-guide.md  video-script.md  video-storyboard.md  zenn-article.md
examples/: gcp_sample.json
python_agents/: .gitignore  Makefile  README.md  README_MULTI_CLOUD.md  __init__.py  requirements.txt  run_example.py  run_multi_cloud_example.py  (+1 more)
(+338 files in other folders)
