[package]
name = "paddi"
version = "0.1.0"
edition = "2021"
authors = ["Paddi Contributors"]
description = "Multi-agent cloud security audit orchestration CLI"
repository = "https://github.com/susumutomita/Paddi"
license = "MIT"

[[bin]]
name = "paddi"
path = "src/main.rs"

[dependencies]
# CLI framework
clap = { version = "4.5", features = ["derive", "cargo", "env"] }
clap_complete = "4.5"

# Async runtime
tokio = { version = "1.40", features = ["full"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Configuration
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# Progress indicators
indicatif = "0.17"

# Process management
which = "6.0"

# Path handling
dirs = "5.0"

[dev-dependencies]
tempfile = "3.10"
assert_cmd = "2.0"
predicates = "3.1"
serial_test = "3.1"

[profile.release]
opt-level = 3
lto = true
strip = true

[profile.dev]
opt-level = 0

[workspace]